# cpp-basics

./: CMakeLists.txt  IDENTIFICATION.txt  Sanitizers.cmake
app/: test_random.cpp  test_rational.cpp
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  test_random  test_rational
include/ra/: random.hpp  rational.hpp
lib/: random.cpp
